# attendance

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: image.yaml
app/: security.py  settings.py  tests.py  utils.py
app/db/: connection.py  models.py
app/routers/: assignments.py  auth.py  courses.py  dashboard.py  quizzes.py  record.py
app/schemas/: assignment.py  attendance_record.py  course.py  dashboard.py  enums.py  quiz.py  user.py
