[project]
name = "attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "resend>=2.30.1",
    "sqlmodel>=0.0.38",
]
