[project]
name = "attendance"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
]

[tool.basedpyright]
include = ["app"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
# ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false
reportCallInDefaultInitializer = "none"
reportUnusedImport = false

pythonVersion = "3.14"
pythonPlatform = "Linux"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ], reportMissingImports = "warning" },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", reportPrivateUsage = false, extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]
